# yavc

./: .gitignore  CMakeLists.txt  README.md
doc/: abandoned-levers.md  architecture.md  audiocodec-evo.md  compression.md  dos-build.md  possible-improvements.md  v3-streaming.md  visualizer.md
src/common/: adpcm.h  adpcm_dec.c  adpcm_internal.h  bitstream.h  codec.c  codec.h  entropy.h  entropy_dec.c  entropy_internal.h  glyphset.h  huffman.h  huffman_dec.c  lzss.h  lzss_dec.c  mode_rle.h  ramp.h  range.h  range_ctx.h  range_ctx_dec.c  range_ctx_internal.h  range_dec.c  range_internal.h  tvid_format.h  xterm256.h
src/decoder/: audio.h  audio_coreaudio.c  audio_dos.c  audio_null.c  backend.h  backend_ansi.c  backend_dos.c  player.c  prof_dos.h
src/encoder/: adpcm_ctx_probe.hpp  adpcm_enc.cpp  blockcoder.cpp  blockcoder.hpp  enc_stages.cpp  enc_stages.hpp  encoder.cpp  entropy_enc.cpp  huffman_enc.cpp  lzss_enc.cpp  mono_celldist.h  quantize.cpp  quantize.hpp  range_bin_probe.hpp  range_ctx_enc.cpp  range_enc.cpp  viz_trace.cpp  viz_trace.hpp
src/visualizer/: visualizer.cpp
src/visualizer/web/: app.css  app.js  index.html
tests/: adpcm_test.c  audio_ctx_test.c  audio_entropy_test.c  codec_test.cpp  coder_golden_test.cpp  encode_decode_test.cpp  entropy_test.c  lzss_test.c  mode_rle_test.c  range_test.c  segment_test.cpp
tools/: build-dos.sh  dos-cross.cmake  dosbox-x.conf  encode-all.sh  encode.sh  make-distr.sh  visualize.sh
tools/probe/: rc_probe.c
